# marketing-agent

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
src/: main.py
src/domains/analysis/: graph.py  prompt.py  tools.py  utils.py
src/domains/analysis/subagents/: definitions.py
